// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apply block overrides should apply slate overrides from html 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "hello world",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`apply block overrides should apply slate overrides from html and apply node data to matching nodes 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "$sourceId": "7",
              "brandColors": false,
              "color": "#FFCC58",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "hello world",
              },
            ],
            "object": "inline",
            "type": "highlight",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;
